; ModuleID = '/home/carl/AnghaBench/curl/lib/extr_conncache.c_conncache_add_bundle.c'
source_filename = "/home/carl/AnghaBench/curl/lib/extr_conncache.c_conncache_add_bundle.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.conncache = type { i32 }
%struct.connectbundle = type { i32 }

@TRUE = common dso_local global i32 0, align 4
@FALSE = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (%struct.conncache*, i8*, %struct.connectbundle*)* @conncache_add_bundle to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @conncache_add_bundle(%struct.conncache* %0, i8* %1, %struct.connectbundle* %2) #0 {
  %4 = alloca %struct.conncache*, align 8
  %5 = alloca i8*, align 8
  %6 = alloca %struct.connectbundle*, align 8
  %7 = alloca i8*, align 8
  store %struct.conncache* %0, %struct.conncache** %4, align 8
  store i8* %1, i8** %5, align 8
  store %struct.connectbundle* %2, %struct.connectbundle** %6, align 8
  %8 = load %struct.conncache*, %struct.conncache** %4, align 8
  %9 = getelementptr inbounds %struct.conncache, %struct.conncache* %8, i32 0, i32 0
  %10 = load i8*, i8** %5, align 8
  %11 = load i8*, i8** %5, align 8
  %12 = call i32 @strlen(i8* %11)
  %13 = load %struct.connectbundle*, %struct.connectbundle** %6, align 8
  %14 = call i8* @Curl_hash_add(i32* %9, i8* %10, i32 %12, %struct.connectbundle* %13)
  store i8* %14, i8** %7, align 8
  %15 = load i8*, i8** %7, align 8
  %16 = icmp ne i8* %15, null
  br i1 %16, label %17, label %19

17:                                               ; preds = %3
  %18 = load i32, i32* @TRUE, align 4
  br label %21

19:                                               ; preds = %3
  %20 = load i32, i32* @FALSE, align 4
  br label %21

21:                                               ; preds = %19, %17
  %22 = phi i32 [ %18, %17 ], [ %20, %19 ]
  ret i32 %22
}

declare dso_local i8* @Curl_hash_add(i32*, i8*, i32, %struct.connectbundle*) #1

declare dso_local i32 @strlen(i8*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
